# antiopening

./: README.md  browse.py  slave.py  testing.ipynb  tree.db
nnue-parser/: LICENSE  README.md
nnue-parser/nnue_probe_python/: example.py  setup.py
nnue-parser/nnue_probe_python/nnue_probe/: __init__.py  nnue.py
nnue-parser/nnue_probe_rs/: Cargo.toml  bench.py  example.py  example_2.py
nnue-parser/nnue_probe_rs/bench/: Cargo.toml
nnue-parser/nnue_probe_rs/bench/src/: main.rs  nnue.rs
nnue-parser/nnue_probe_rs/src/: lib.rs
src/: position.py
