[package]
name = "nnue_parser"
version = "0.3.1"
description = "A fast NNUE-Parser for my NNUE implementation"
license = "MIT"
authors = ["Jimmy Luong <nguyenhungjimmy.luong@gmail.com>"]
repository = "https://github.com/github-jimjim/NNUE-Parser"
edition = "2021"


[lib]
name = "nnue_parser"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17", features = ["extension-module"] }
chess = "2.0"    
byteorder = "1.4"
once_cell = "1.17"
